signup page and login page

--- a/finTech/src/app/app.component.html
+++ b/finTech/src/app/app.component.html
@@ -18,4 +18,10 @@
   </li>
 </ul>
 
-<app-loginsignup></app-loginsignup>
+<button routerLink="login" routerLinkActive="active">login </button>
+<button routerLink="signup1" routerLinkActive="active">Signup</button>
+<router-outlet></router-outlet>
+
+
+<!--<app-login></app-login>-->
+
